django/django_orm/users commands.txt

Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack (master)
$ source my_environments/djangoPy3Env/Scripts/activate
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack (master)
$ cd django
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django (master)
$ cd django_fundamentals/
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals (master)
$ django-admin startproject single_model_orm
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals (master)
$ cd single_model_orm/
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py startapp users_app
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ code .
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py makemigrations
Migrations for 'users_app':
  users_app\migrations\0001_initial.py
    - Create model Movie
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py makemigrations
Did you rename the users_app.Movie model to users? [y/N] y
Migrations for 'users_app':
  users_app\migrations\0002_auto_20210520_1149.py
    - Rename model Movie to users
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions, users_app
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying sessions.0001_initial... OK
  Applying users_app.0001_initial... OK
  Applying users_app.0002_auto_20210520_1149... OK
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py shell
Python 3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from users_app.models import users
>>> users.objects.create(first_name = 'lana', last_name = 'yaghi', email_address = 'lana@gmil.battata', age='23')
<users: users object (1)>
>>> users.objects.create(first_name='wadee',last_name='awwad',email_address='wadee@hotmail.com' age='27')
  File "<console>", line 1
    users.objects.create(first_name='wadee',last_name='awwad',email_address='wadee@hotmail.com' age='27')
                                                                                                ^
SyntaxError: invalid syntax
>>>    users.objects.create(first_name='wadee',last_name='awwad',email_address='wadee@hotmail.com' age='27')

KeyboardInterrupt
>>>    users.objects.create(first_name='wadee',last_name='awwad',email_address='wadee@hotmail.com', age='27')
  File "<console>", line 1
       users.objects.create(first_name='wadee',last_name='awwad',email_address='wadee@hotmail.com', age='27')
    ^
SyntaxError: invalid syntax
>>     users.objects.create(first_name='wadee',last_name='awwad',email_address='  File "<console>", line 17')
       users.objects.create(first_name='wadee',last_name='awwad',email_address='wadee@hotmail.com', age='27')
SyntaxError: invalid syntax
>>> users.objects.create(first_name='wadee', last_name='awwad', email_address='wadee@hotm', age='27')
  File "<console>", line 1
    users.objects.create(first_name='wadee', last_name='awwad', email_address='wadee@hotm', age='27')
    ^
SyntaxError: invalid syntax
>>> from users_app.models import users
>>> users.objects.create(first_name='wadee', last_name='awwad', email_address='wadee@hotm', age='27')
<users: users object (2)>
>>> users.objects.create(first_name= 'Ibraheem', last_name='Shweiki', email_address='ibraheem@Mamool.com', age= '32')
<users: users object (3)>
>>> exit()
  File "<console>", line 1
    exit()
    ^
SyntaxError: invalid syntax
>>> Exit()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Exit' is not defined
>>> exit
Use exit() or Ctrl-Z plus Return to exit
>>>       2 [sig] bash 421! sigpacket::process: Suppressing signal 18 to win32 process (pid 0)
4130323 [sig] bash 421! sigpacket::process: Suppressing signal 18 to win32 process (pid 0)
21414659 [sig] bash 421! sigpacket::process: Suppressing signal 18 to win32 process (pid 0)
exit()
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py makemigrations
No changes detected
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions, users_app
Running migrations:
  No migrations to apply.
(djangoPy3Env)
Ibraheem@EYazan-XPS MINGW64 ~/Desktop/python_stack/django/django_fundamentals/single_model_orm (master)
$ python manage.py shell
Python 3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> users.objects.all
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'users' is not defined
>>> users.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'users' is not defined
>>> from users_app.models import users
>>> users.objects.all()
<QuerySet [<users: users object (1)>, <users: users object (2)>, <users: users object (3)>]>
>>> users.objects.last()
<users: users object (3)>
>>> users.objects.first()
<users: users object (1)>
>>> users.objects.get(id=3)
<users: users object (3)>
>>> user_to_update = users.objects.get(id=3)
>>> user_to_update.last_name = pancakes
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'pancakes' is not defined
>>> user_to_update.last_name = 'pancakes'
>>> user_to_update.save()
>>> users.objects.get(id=2)
  File "<console>", line 1
    users.objects.get(id=2)
                     ^
SyntaxError: invalid syntax
>>> from users_app.models import users
>>> users.objects.get(id=2)
<users: users object (2)>
>>> users_to_delete = users.object.get(id=2)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'users' has no attribute 'object'
>>> user_to_delete = users.objects.get(id=2)
>>> user_to_delete.delete()
(1, {'users_app.users': 1})
>>> users.objects.all()
<QuerySet [<users: users object (1)>, <users: users object (3)>]>
>>> users.objects.all().order_by('first_name')
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Ibraheem\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\query.py", line 1074, in order_by
    obj.query.add_ordering(*field_names)
  File "C:\Users\Ibraheem\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\sql\query.py", line 1812, in add_ordering
    raise FieldError('Invalid order_by arguments: %s' % errors)
django.core.exceptions.FieldError: Invalid order_by arguments: ['first_name)\x1b[D']
>>> users.objects.all().order_by("first_name")
<QuerySet [<users: users object (3)>, <users: users object (1)>]>
>>> users.objects.all()
<QuerySet [<users: users object (1)>, <users: users object (3)>]>
>>> users.objects.order_by("first_name")
<QuerySet [<users: users object (3)>, <users: users object (1)>]>
>>> users.objects.all
<bound method BaseManager.all of <django.db.models.manager.Manager object at 0x00000221E54C8D30>>
>>> users.object.all().order_by("-first_name")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'users' has no attribute 'object'
>>> users.objects.all
<bound method BaseManager.all of <django.db.models.manager.Manager object at 0x00000221E54C8D30>>
>>> users.objects.all().order_by("-first_name")
<QuerySet [<users: users object (1)>, <users: users object (3)>]>
>>>
